--- a/index.html
+++ b/index.html
@@ -222,6 +222,8 @@ h1, h2, .cta-button, .product-card-content h2 {
   </div>
 
 <script type="application/ld+json">
+
+      
 {
   "@context": "https://schema.org",
   "@graph": [
@@ -235,7 +237,7 @@ h1, h2, .cta-button, .product-card-content h2 {
           "position": 1,
           "name": "360training OSHA Outreach",
           "url": "https://dir.querygap.com/cheap-osha-training-materials/",
-          "image": "https://res.cloudinary.com/dhfbsqfxr/image/upload/360training.jpg",
+          "image": "https://res.cloudinary.com/dhfbsqfxr/image/upload/360training-osha10-ppe.jpg",
           "description": "OSHA-authorized online training at unbeatable prices for construction and general industry.",
           "additionalProperty": {
             "@type": "PropertyValue",
@@ -261,7 +263,7 @@ h1, h2, .cta-button, .product-card-content h2 {
           "position": 3,
           "name": "ClickSafety",
           "url": "https://dir.querygap.com/cheap-osha-training-materials/",
-          "image": "https://res.cloudinary.com/dhfbsqfxr/image/upload/clicksafety.jpg",
+          "image": "https://res.cloudinary.com/dhfbsqfxr/image/upload/clicksafety-osha10.jpg",
           "description": "Trusted safety training with frequent discounts on OSHA 10 and 30-hour courses.",
           "additionalProperty": {
             "@type": "PropertyValue",
@@ -274,7 +276,7 @@ h1, h2, .cta-button, .product-card-content h2 {
           "position": 4,
           "name": "National Safety Council (NSC) Training",
           "url": "https://dir.querygap.com/cheap-osha-training-materials/",
-          "image": "https://res.cloudinary.com/dhfbsqfxr/image/upload/nsc-training.jpg",
+          "image": "https://res.cloudinary.com/dhfbsqfxr/image/upload/nsc-osha-kit.jpg",
           "description": "Non-profit OSHA-aligned materials at low cost, including free safety resources.",
           "additionalProperty": {
             "@type": "PropertyValue",
@@ -305,7 +307,7 @@ h1, h2, .cta-button, .product-card-content h2 {
           "name": "Are low-cost OSHA training programs still legitimate?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Yes — many OSHA-authorized providers offer discounted pricing without compromising on certification validity or content quality."
+            "text": "Yes \u2014 many OSHA-authorized providers offer discounted pricing without compromising on certification validity or content quality."
           }
         },
         {
@@ -313,7 +315,7 @@ h1, h2, .cta-button, .product-card-content h2 {
           "name": "Can I use one training kit for multiple employees?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Yes — downloadable training kits from providers like Hard Hat Training can be reused indefinitely for multiple sessions."
+            "text": "Yes \u2014 downloadable training kits from providers like Hard Hat Training can be reused indefinitely for multiple sessions."
           }
         },
         {
@@ -328,6 +330,7 @@ h1, h2, .cta-button, .product-card-content h2 {
     }
   ]
 }
+
 </script>
 
 
